[gd_scene load_steps=16 format=2]

[ext_resource path="res://Sprites/prometheus eagle background.png" type="Texture" id=1]
[ext_resource path="res://Sprites/Prometheus Title.png" type="Texture" id=2]
[ext_resource path="res://Sprites/playhover.png" type="Texture" id=3]
[ext_resource path="res://Sprites/exithover.png" type="Texture" id=4]
[ext_resource path="res://TitleScreen.gd" type="Script" id=5]
[ext_resource path="res://Sprites/play.png" type="Texture" id=6]
[ext_resource path="res://Sprites/exit.png" type="Texture" id=7]
[ext_resource path="res://Sprites/controlsbuttonhover.png" type="Texture" id=8]
[ext_resource path="res://Sprites/controlsbutton.png" type="Texture" id=9]
[ext_resource path="res://Sprites/creditsbuttonhover.png" type="Texture" id=10]
[ext_resource path="res://Sprites/creditsbutton.png" type="Texture" id=11]
[ext_resource path="res://Sprites/multiplayerbutton.png" type="Texture" id=12]
[ext_resource path="res://Sprites/multiplayerbuttonhover.png" type="Texture" id=13]
[ext_resource path="res://Sprites/leaderboardbutton.png" type="Texture" id=14]
[ext_resource path="res://Sprites/leaderboardbuttonhover.png" type="Texture" id=15]

[node name="TitleScreen" type="Node"]
script = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 160, 115 )
scale = Vector2( 0.217, 0.217 )
texture = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = 20.0
margin_top = 10.0
margin_right = 300.0
margin_bottom = 50.0
texture = ExtResource( 2 )
stretch_mode = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" type="TextureButton" parent="."]
margin_left = 20.0
margin_top = 63.0
margin_right = 84.0
margin_bottom = 82.0
rect_scale = Vector2( 1.2, 1.2 )
texture_normal = ExtResource( 6 )
texture_hover = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MultiplayerButton" type="TextureButton" parent="."]
margin_left = 20.0
margin_top = 88.0
margin_right = 198.0
margin_bottom = 108.0
rect_scale = Vector2( 0.7, 0.7 )
texture_normal = ExtResource( 12 )
texture_hover = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeaderboardButton" type="TextureButton" parent="."]
margin_left = 20.0
margin_top = 104.0
margin_right = 213.0
margin_bottom = 124.0
rect_scale = Vector2( 0.7, 0.7 )
texture_normal = ExtResource( 14 )
texture_hover = ExtResource( 15 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ControlsButton" type="TextureButton" parent="."]
margin_left = 20.0
margin_top = 120.0
margin_right = 159.0
margin_bottom = 140.0
rect_scale = Vector2( 0.7, 0.7 )
texture_normal = ExtResource( 9 )
texture_hover = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CreditsButton" type="TextureButton" parent="."]
margin_left = 20.0
margin_top = 136.0
margin_right = 133.0
margin_bottom = 156.0
rect_scale = Vector2( 0.7, 0.7 )
texture_normal = ExtResource( 11 )
texture_hover = ExtResource( 10 )

[node name="ExitButton" type="TextureButton" parent="."]
margin_left = 20.0
margin_top = 152.0
margin_right = 84.0
margin_bottom = 171.0
rect_scale = Vector2( 0.7, 0.7 )
texture_normal = ExtResource( 7 )
texture_hover = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 300.0
margin_bottom = 160.0
size_flags_horizontal = 5
custom_constants/separation = 8

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 280.0

[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="LeaderboardButton" to="." method="_on_LeaderboardButton_pressed"]
[connection signal="pressed" from="ControlsButton" to="." method="_on_ControlsButton_pressed"]
[connection signal="pressed" from="CreditsButton" to="." method="_on_CreditsButton_pressed"]
[connection signal="pressed" from="ExitButton" to="." method="_on_ExitButton_pressed"]
